src/assets/blog.css
:root {
  --white: #ffffff;
  --off-white: #f1f1f1;
  --black: #1b1b1b;
  --light-black: #0b0b0b;
  --dark-grey: #252525;
  --grey: #888888;
  --light-red: #f85149;
  --dark-red: #da3633;
  --blue: #38bdf8;
  --purple: #a371f7;
  --yellow: #e3b341;
  --dark-green: #3fb950;
  --light-green: #56d364;
}

body.blog-theme {
	background-color: var(--black);
	color: var(--off-white);
	margin: 0;
	font-size: 1rem;
}

body.blog-theme::before {
	content: "";
	position: fixed;
	inset: 0;
	background-size: 5vw 5vw;
	background-image: radial-gradient(circle, var(--off-white) 1px, transparent 1px);
	animation: bgmove 120s linear infinite;
	z-index: -1;
}

@keyframes bgmove {
	from {
		background-position: 0 0;
	}
	to {
		background-position: 200px 200px;
	}
}

.blog-container {
	background-color: var(--dark-grey);
	max-width: 60%;
	margin: 0px auto;
	padding: 80px 60px;
	line-height: 1.7;
	box-shadow: 0 0 100px 0 var(--light-black);
}

/* =================================== headers ==================================== */

h1::before,
h2::before,
h3::before,
h4::before,
h5::before,
h6::before {
	content: "#";
	vertical-align: middle;
	font-size: 0.9em;
	color: var(--grey);
	margin-right: 0.5em;
}

/* ==================================== links ===================================== */

a {
	color: var(--blue);
	text-decoration: none;
	border-bottom: thin solid var(--blue);
	transition: 0.2s;
}

a:hover {
	color: cyan;
	border-bottom-color: cyan;
}

/* ================================= blockquotes ================================== */

blockquote {
	border-left: 5px solid var(--purple);
	padding: 0.6rem 1rem;
	margin: 1.5rem 0;
	font-style: italic;
}

blockquote p {
	margin: 0;
}

